--- a/agile/src/main/resources/application.yml
+++ b/agile/src/main/resources/application.yml
@@ -1,1 +1,28 @@
+server.port: 7001
+server.error.include-message: always
 
+# Strongly recommend to set this property to "none" in a production environment!
+spring.jpa.hibernate.ddl-auto: update
+
+spring.jpa:
+  properties.hibernate:
+    dialect: org.hibernate.dialect.PostgreSQLDialect
+    format_sql: true
+  show-sql: true
+
+logging.level.org.hibernate.stat: debug
+
+spring.datasource:
+  url: jdbc:postgresql://localhost:5432/agile-db
+  username: postgres
+  password: rootpwd
+
+---
+spring.config.activate.on-profile: docker
+
+server.port: 8080
+
+spring.datasource:
+  url: ${POSTGRES_URL}
+  username: ${POSTGRES_USER}
+  password: ${POSTGRES_PWD}
