--- a/agile/build.gradle
+++ b/agile/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.hibernate.validator:hibernate-validator:6.2.3.Final'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'net.sizovs:pipelinr:0.7'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
